Adding text to About page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,6 +9,7 @@
     <body>
         <div class="main-content">
             {{>header}}
+            <p>This site was created by Graeme Nelson. It uses data from mapbox.com and weatherstack.com.</p>
             <img class="portrait" src="/img/2023-06-02.jpg">
             <p>{{description}}</p>
         </div>
